# discord_app

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: release.yaml  tests.yaml
samples/: sample.py
src/discord_app/: application.py  channel.py  guild.py  guild_scheduled_event.py  interaction.py  presence.py  voice.py  webhook.py
tests/: all.py  application.py  channel.py  command.py  interaction.py  test_application.py  test_channel.py  test_interaction.py  test_webhook.py
