[build-system]
requires = [
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry"

[tool.poetry]
name = "discord_app"
version = "0.0.1-alpha.0"
description = "Discord Interaction Application framework for Python"
authors = ["JackyCCC <jacky9813@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jacky9813/discord_app"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "^2.27.1"
Flask = "^2.1.1"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
tox = "^3.25.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
mypy = "^0.942"
types-requests = "^2.27.20"

[tool.pytest.ini_options]
addopts = "--cov=src/discord_app"
testpaths = [
    "tests/all.py",
]

[tool.mypy]
mypy_path = "src"
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py38, py39, py310

[testenv]
deps = pytest >= 7.1.1
commands = pytest
"""
