[metadata]
name = discord_app
version = 0.0.1
author = JackyCCC
description = Discord interaction application model wrapper
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacky9813/discord_app
project_urls =
    Bug Tracker = https://github.com/jacky9813/discord_app/issues
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    flask>=2.1.0
    requests>=2.25.1
    pynacl>=1.4.0

[options.packages.find]
where = src

[options.extras_require]
testing = 
    flake8>=3.9.2
    tox>=3.24.3
    pytest>=6.2.5
    pytest-cov>=2.12.1
    mypy>=0.910

[options.package_data]
discord_app = py.typed

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401
